# fos

./: .gitignore  .prettierignore  CHANGELOG.md  Makefile  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.codex/: instructions.md
codebooks/: acemoglu_restrepo_robot_exposure.yaml  acs_household.yaml  acs_person.yaml  ai_exposure_measures.yaml  atus_public_time_use.yaml  bls_employment_projections.yaml  bls_laus.yaml  bls_oews.yaml  bls_qcew.yaml  brfss_public.yaml  cdc_public_health.yaml  community_context_features.yaml  constructs.yaml  cps_labor_context.yaml  cps_person.yaml  ess.yaml  eurostat_public_context.yaml  gfs_wave1.yaml  gfs_wave2.yaml  gss_public_context.yaml  health_validation_context_features.yaml  ilo_public_context.yaml  intervention_effect_size_priors_v1.yaml  meps_public.yaml  nhanes_public.yaml  nhis_public.yaml  oecd_public_context.yaml  onet.yaml  opportunity_atlas.yaml  pew_religious_landscape.yaml  place_context_features.yaml  social_capital_atlas.yaml  social_capital_context_features.yaml  time_use_context_features.yaml  volunteering_civic_life.yaml  world_bank_public_context.yaml  world_happiness_report.yaml  wvs.yaml
fixtures/: gfs_us_18_24.parquet  young_adult_spec.yml
infra/: README.md  data-service.env.example
tests/: target_trial_fixture_only.py  test_access_policy.py  test_adapter_registry.py  test_admin_data_access_workflows.py  test_ai_exposure.py  test_ai_work_data_pack.py  test_api_health.py  test_backtest_anchors.py  test_brief_export_api.py  test_claim_transportability.py  test_codebooks.py  test_community_context.py  test_concordia_causality_guard.py  test_data_workstream.py  test_dataset_card_lint.py  test_dataset_reference.py  test_evidence_graph.py  test_exposure_ensemble.py  test_flourishing_scoring.py  test_fos_rename_policy.py  test_health_public.py  test_international_context.py  test_international_panels.py  test_intervention_priors.py  test_longitudinal_features.py  test_mortality_disclosure_rules.py  test_occupation_crosswalks.py  test_openapi_client.py  test_panel_schema.py  test_partner_feed_contracts.py  test_place_context.py  test_population_api.py  test_quality_gates.py  test_release_manifest.py  test_release_readiness.py  test_restricted_aggregate_ingestion.py  (+10 more)
(+343 files in other folders)
