[project]
name = "fos"
version = "0.1.0"
description = "FOS monorepo"
requires-python = ">=3.11"
dependencies = [
  "fos-api",
  "fw-contracts",
  "fos-sim-kernel",
  "fos-population-synth",
  "fos-validation-core",
  "fos-render-core",
  "fos-pack-flourishing",
  "fos-pack-toy-sir",
  "hypothesis>=6.120.0",
  "pytest>=8.3.0",
  "ruff>=0.8.0",
]

[tool.uv.workspace]
members = [
  "apps/api",
  "packages/contracts",
  "packages/sim-kernel",
  "packages/population-synth",
  "packages/validation-core",
  "packages/render-core",
  "packs/flourishing",
  "packs/toy-sir",
]

[tool.uv.sources]
fos-api = { workspace = true }
fw-contracts = { workspace = true }
fos-sim-kernel = { workspace = true }
fos-population-synth = { workspace = true }
fos-validation-core = { workspace = true }
fos-render-core = { workspace = true }
fos-pack-flourishing = { workspace = true }
fos-pack-toy-sir = { workspace = true }
