[project]
name = "fos"
version = "0.1.0"
description = "FOS monorepo"
requires-python = ">=3.11"
dependencies = [
  "fos-api",
  "fos-data-pipelines",
  "fos-data-service",
  "fos-adapters",
  "fos-contracts",
  "fos-sim-kernel",
  "fos-population-synth",
  "fos-validation-core",
  "fos-render-core",
  "fos-pack-flourishing",
  "fos-pack-toy-sir",
  "hypothesis>=6.120.0",
  "pytest>=8.3.0",
  "ruff>=0.8.0",
]

[tool.uv.workspace]
members = [
  "apps/api",
  "packages/data-pipelines",
  "packages/data-service",
  "packages/contracts",
  "packages/fos-adapters",
  "packages/sim-kernel",
  "packages/population-synth",
  "packages/validation-core",
  "packages/render-core",
  "packs/flourishing",
  "packs/toy-sir",
]

[tool.uv.sources]
fos-api = { workspace = true }
fos-data-pipelines = { workspace = true }
fos-data-service = { workspace = true }
fos-adapters = { workspace = true }
fos-contracts = { workspace = true }
fos-sim-kernel = { workspace = true }
fos-population-synth = { workspace = true }
fos-validation-core = { workspace = true }
fos-render-core = { workspace = true }
fos-pack-flourishing = { workspace = true }
fos-pack-toy-sir = { workspace = true }

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py", "smoke_*.py"]
